@@ -10,7 +10,9 @@
 			to make several changes to Segue's database and file-storage structure.
 		 (<i>Adam Franco</i>)
 		
-		
+		<li/> Change:  
+			Added the HTML Area editor to Image, Link, and File, story types.
+		 (<i>Adam Franco</i>)
 		<li/> Bug Fix:
 	 
 			Fixed bug in display of stories by enclosing each story in a table to
